--- a/mnist-example.ipynb
+++ b/mnist-example.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The images are Numpy arrays, and labels are digits from 0 to 9."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -125,7 +132,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The compilation step"
+    "The compilation step\n",
+    "\n",
+    "Loss function: to measure the netwerk performance.\n",
+    "\n",
+    "Optimizer: the method to update the network's coefficients.\n",
+    "\n",
+    "Metrics: how to monitor the training."
    ]
   },
   {
